--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@astrojs/cloudflare": "^12.5.0",
     "@astrojs/react": "^4.2.4",
     "@auth/core": "^0.37.4",
+    "@nanostores/react": "^1.0.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "astro": "^5.7.0",
     "auth-astro": "^4.2.0",
     "bcryptjs": "^3.0.2",
+    "js-cookie": "^3.0.5",
+    "nanostores": "^1.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sweetalert2": "^11.18.0",
